--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,4 +4,7 @@
 @import "global";
 @import "header";
 @import "footer";
-@import "studentLandingPage";
+@import "buttons";
+@import "social-icons";
+@import "page";
+@import "lesson";
