Updating index page to utilize new markup and styles Also, updated lessons graphics for existing projects

--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -4,19 +4,28 @@
   padding: $padding / 2 $padding * 2;
   border-radius: 100px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.21);
+  text-decoration: none;
 
-  &.-js {
-    background: #2cd7ee;
+  &.-beginner {
+    background: #1baabd;
     &:hover {
-      background: #0d86a1;
+      background: #09728a;
     }
   }
 
-  &.-html {
+  &.-intermediate {
     background: #925aec;
 
     &:hover {
       background: #5627a3;
+    }
+  }
+
+  &.-advanced {
+    background: #0b8f3d;
+
+    &:hover {
+      background: #0b5a29;
     }
   }
 }
