--- a/src/Projects/BeginnerCSS/CSS01/styles/styles.css
+++ b/src/Projects/BeginnerCSS/CSS01/styles/styles.css
@@ -1,4 +1,119 @@
 h1 {
-  color: #4e9e05;
+  color: #1c77c3;
+  background: #7fc6ff;
   font-family: Helvetica;
+  text-align: center;
+  margin: 0px;
+  padding: 20px;
+}
+
+.boxes {
+  background: #cce3fc;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box1 {
+  width: 100px;
+  height: 100px;
+  background: #ffffff;
+  border: 2px solid #9a031e;
+  text-align: center;
+}
+
+.box2 {
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  border: 5px solid #17bc9b;
+  background: #13987d;
+  border-radius: 10px;
+  color: #ffffff;
+  text-align: center;
+}
+
+.box3 {
+  width: 75px;
+  height: 75px;
+  padding: 15px;
+  border: 1px solid #fa85bc;
+  border-radius: 50px;
+  background: #ae2c6b;
+  color: #fa85bc;
+  text-align: center;
+}
+
+.box4 {
+  width: 125px;
+  height: 125px;
+  padding: 12px;
+  border: 4px solid #fb8b24;
+}
+
+.buttons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #d0e3f8;
+  padding: 50px;
+}
+
+.button1 {
+  color: #1430cb;
+  font-size: 20px;
+}
+.button1:hover {
+  color: #b62020;
+  text-decoration: none;
+}
+
+.button2 {
+  text-decoration: none;
+  background: #edf67d;
+  color: #3f411d;
+  cursor: wait;
+  padding: 8px;
+}
+.button2:hover {
+  color: #edf67d;
+  background: #3f411d;
+  font-weight: bold;
+}
+
+.button3 {
+  text-decoration: none;
+  background: linear-gradient(#82263a 0%, #2d0d14 100%);
+  color: #ff97af;
+  cursor: zoom-in;
+  padding: 18px;
+  border-radius: 70px;
+}
+.button3:hover {
+  color: #ffbfce;
+}
+
+.texts {
+  background: #d0e3f8;
+  padding: 30px;
+}
+
+.text1 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font-family: Verdana;
+  font-weight: 900;
+}
+
+.text2 {
+  font-family: Roboto;
+  font-size: 50px;
+  margin: 5px;
+  color: #23558e;
+}
+
+.text3 {
+  text-decoration: line-through;
+  color: #bb1c1c;
+  font-size: 20px;
 }
