--- a/src/Projects/BeginnerCSS/CSS01/styles/styles.css
+++ b/src/Projects/BeginnerCSS/CSS01/styles/styles.css
@@ -1,41 +1,55 @@
 h1 {
+  /* Keep Me */
 }
 
 .boxes {
+  /* Keep Me */
 }
 
 .box1 {
+  /* Keep Me */
 }
 
 .box2 {
+  /* Keep Me */
 }
 
 .box3 {
+  /* Keep Me */
 }
 
 .buttons {
+  /* Keep Me */
 }
 
 .button1 {
+  /* Keep Me */
 }
 
 .button1:hover {
+  /* Keep Me */
 }
 
 .button2 {
+  /* Keep Me */
 }
 
 .button2:hover {
+  /* Keep Me */
 }
 
 .texts {
+  /* Keep Me */
 }
 
 .text1 {
+  /* Keep Me */
 }
 
 .text2 {
+  /* Keep Me */
 }
 
 .text3 {
+  /* Keep Me */
 }
