--- a/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
@@ -7,39 +7,64 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url(https://external-preview.redd.it/DCW1TFNOajA5JWur14y-bv_eHguLPRjMPecsc7LeHOw.jpg?width=960&crop=smart&auto=webp&s=38d8ea45fc703248b1138fa9a55e083d16c67f93);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  position: relative;
+
+  &:before {
+    content: "";
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
 }
 
 .wrapper {
-  background: #333;
 }
 
-.header {
-  background: #eeeeee;
-  padding: 20px;
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px 20px;
+  color: #ffffff;
+}
 
-  h1 {
-    margin: 10px;
-    padding: 0;
-    font-family: Roboto;
-  }
+.miles {
+  height: 350px;
+  position: fixed;
+  right: 0;
+}
 
-  img {
-    width: 100%;
-    margin: 0;
-  }
+.gwen {
+  position: fixed;
+  left: 2vw;
+  bottom: 0;
+  width: 400px;
 }
 
 .description {
-  color: #ffffff;
   font-size: 20px;
   line-height: 30px;
-  padding: 20px;
 }
 
-.images {
-  padding: 20px;
+.title {
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.gallery {
+  display: flex;
 
   img {
-    width: 100%;
+    flex: 1;
+    object-fit: contain;
+    width: 25%;
   }
 }
