--- a/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
@@ -16,7 +16,7 @@ body {
 
   &:before {
     content: "";
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
     position: absolute;
@@ -26,9 +26,6 @@ body {
   }
 }
 
-.wrapper {
-}
-
 .container {
   max-width: 1000px;
   margin: 0 auto;
@@ -36,17 +33,28 @@ body {
   color: #ffffff;
 }
 
+.button {
+  background: #850b0b;
+  color: #fa3434;
+  padding: 10px;
+  text-decoration: none;
+
+  &:hover {
+    background: #fa3434;
+    color: #850b0b;
+  }
+}
+
 .miles {
-  height: 350px;
   position: fixed;
   right: 0;
 }
 
 .gwen {
   position: fixed;
-  left: 2vw;
+  left: 2%;
   bottom: 0;
-  width: 400px;
+  width: 350px;
 }
 
 .description {
