--- a/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-image: url("https://external-preview.redd.it/DCW1TFNOajA5JWur14y-bv_eHguLPRjMPecsc7LeHOw.jpg?width=960&crop=smart&auto=webp&s=38d8ea45fc703248b1138fa9a55e083d16c67f93");
+  background-image: url("https://compote.slate.com/images/fe5688b7-fcbb-48a9-82c9-f527811e995b.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -33,46 +33,33 @@ body {
   color: #ffffff;
 }
 
+.ralph {
+  width: 250px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 .button {
-  background: #850b0b;
-  color: #fa3434;
+  background: #075c76;
+  color: #1bb8e8;
   padding: 10px;
   text-decoration: none;
 
   &:hover {
-    background: #fa3434;
-    color: #850b0b;
+    background: #1bb8e8;
+    color: #075c76;
   }
-}
-
-.miles {
-  position: fixed;
-  right: 0;
-}
-
-.gwen {
-  position: fixed;
-  left: 2%;
-  bottom: 0;
-  width: 350px;
-}
-
-.description {
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.title {
-  margin: 0;
-  padding-bottom: 10px;
 }
 
 .gallery {
   display: flex;
+  flex-wrap: wrap;
 
   img {
     flex: 1;
     object-fit: contain;
     width: 25%;
+    min-width: 25%;
   }
 }
