--- a/src/Projects/BeginnerCSS/MoviesList/styles/incredibles2.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/incredibles2.scss
@@ -16,10 +16,10 @@ body {
 
   &:before {
     content: "";
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
@@ -27,10 +27,17 @@ body {
 }
 
 .container {
-  max-width: 500px;
-  margin: 0 auto;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 20px;
   color: #ffffff;
+}
+
+.title {
+  margin: 0;
+  padding-right: 10px;
+  display: inline-block;
 }
 
 .button {
@@ -43,12 +50,6 @@ body {
     background: #ae6d0a;
     color: #e9cd29;
   }
-}
-
-.title {
-  margin: 0;
-  padding-right: 10px;
-  display: inline-block;
 }
 
 .description {
