--- a/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
@@ -19,7 +19,7 @@ body {
     background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
@@ -28,9 +28,23 @@ body {
 
 .container {
   max-width: 1000px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 20px;
   color: #ffffff;
+}
+
+.ralph {
+  width: 250px;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+.title {
+  margin: 0;
+  padding-right: 10px;
+  display: inline-block;
 }
 
 .button {
@@ -45,22 +59,9 @@ body {
   }
 }
 
-.ralph {
-  width: 250px;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
-
 .description {
   font-size: 20px;
   line-height: 30px;
-}
-
-.title {
-  margin: 0;
-  padding-right: 10px;
-  display: inline-block;
 }
 
 .gallery-wrapper {
