--- a/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse-finish.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse-finish.scss
@@ -19,7 +19,7 @@ body {
     background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
@@ -28,21 +28,10 @@ body {
 
 .container {
   max-width: 1000px;
-  margin: 0 auto;
-  padding: 10px 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
   color: #ffffff;
-}
-
-.button {
-  background: #fa3434;
-  color: #850b0b;
-  padding: 10px;
-  text-decoration: none;
-
-  &:hover {
-    background: #850b0b;
-    color: #fa3434;
-  }
 }
 
 .miles {
@@ -62,6 +51,18 @@ body {
   margin: 0;
   padding-right: 10px;
   display: inline-block;
+}
+
+.button {
+  background: #fa3434;
+  color: #851b1b;
+  padding: 10px;
+  text-decoration: none;
+
+  &:hover {
+    background: #851b1b;
+    color: #fa3434;
+  }
 }
 
 .description {
