--- a/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/spiderverse.scss
@@ -19,7 +19,7 @@ body {
     background: rgba(0, 0, 0, 0.75);
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
@@ -27,31 +27,23 @@ body {
 }
 
 .container {
+  /* Keep Me */
   max-width: 1000px;
-  margin: 0 auto;
-  padding: 10px 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
   color: #ffffff;
 }
 
-.button {
-  background: #fa3434;
-  color: #850b0b;
-  padding: 10px;
-  text-decoration: none;
-
-  &:hover {
-    background: #850b0b;
-    color: #fa3434;
-  }
-}
-
 .miles {
+  /* Keep Me */
   position: fixed;
-  right: 0;
+  right: 0px;
   width: 250px;
 }
 
 .gwen {
+  /* Keep Me */
   position: fixed;
   left: 2%;
   bottom: 0;
@@ -69,6 +61,18 @@ body {
   line-height: 30px;
 }
 
+.button {
+  background: #fa3434;
+  color: #851b1b;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.button:hover {
+  background: #851b1b;
+  color: #fa3434;
+}
+
 .gallery-wrapper {
   padding-bottom: 50px;
 }
@@ -83,7 +87,6 @@ body {
   display: flex;
 
   img {
-    flex: 1;
     object-fit: contain;
     width: 25%;
   }
