--- a/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/ralph.scss
@@ -27,63 +27,9 @@ body {
 }
 
 .container {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px 20px;
-  color: #ffffff;
+  /* Keep Me */
 }
 
 .ralph {
-  width: 250px;
-  position: fixed;
-  bottom: 0;
-  right: 0;
-}
-
-.title {
-  margin: 0;
-  padding-right: 10px;
-  display: inline-block;
-}
-
-.button {
-  background: #075c76;
-  color: #1bb8e8;
-  padding: 10px;
-  text-decoration: none;
-
-  &:hover {
-    background: #1bb8e8;
-    color: #075c76;
-  }
-}
-
-.description {
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.gallery-wrapper {
-  margin-bottom: 25px;
-}
-
-.gallery-title {
-  margin: 0;
-  padding-right: 10px;
-  display: inline-block;
-}
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 25px;
-
-  img {
-    flex: 1;
-    object-fit: contain;
-    width: 25%;
-    min-width: 25%;
-    margin-bottom: 25px;
-  }
+  /* Keep Me */
 }
