--- a/src/Projects/BeginnerCSS/MoviesList/styles/incredibles2-finish.scss
+++ b/src/Projects/BeginnerCSS/MoviesList/styles/incredibles2-finish.scss
@@ -27,44 +27,47 @@ body {
 }
 
 .container {
-  max-width: 1000px;
+  max-width: 500px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px 20px;
-  color: #ffffff;
+  padding: 20px;
+  color: #e5e5e5;
 }
 
 .title {
   margin: 0;
-  padding-right: 10px;
-  display: inline-block;
+  padding-right: 2vw;
+  display: inline;
+}
+
+.description {
+  font-size: 18px;
+  line-height: 1.75rem;
 }
 
 .button {
   background: #e9cd29;
-  color: #ae6d0a;
-  padding: 10px;
+  color: #a36d1a;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 30px;
+  padding-left: 30px;
   text-decoration: none;
 
   &:hover {
-    background: #ae6d0a;
+    background: #a36d1a;
     color: #e9cd29;
   }
 }
 
-.description {
-  font-size: 20px;
-  line-height: 30px;
-}
-
 .gallery-wrapper {
-  margin-bottom: 25px;
+  margin-bottom: 10vh;
 }
 
 .gallery-title {
   margin: 0;
-  padding-right: 10px;
-  display: inline-block;
+  padding-right: 10%;
+  display: inline;
 }
 
 .gallery {
@@ -72,7 +75,6 @@ body {
   flex-wrap: wrap;
 
   img {
-    flex: 1;
     object-fit: contain;
     width: 100%;
     margin-top: 20px;
