--- a/src/Projects/BeginnerCSS/Megaman/styles/styles.scss
+++ b/src/Projects/BeginnerCSS/Megaman/styles/styles.scss
@@ -31,65 +31,43 @@ body {
   text-align: center;
 }
 
-.characters {
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.row {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 100vw;
-    height: 100%;
-    z-index: -1;
-    background-position: center center;
-    background-size: 250px;
-    background-repeat: repeat-y;
-    background: linear-gradient(
-      0deg,
-      #0272fc 0%,
-      #0272fc 20%,
-      #02fee5 20%,
-      #02fee5 23%,
-      #0272fc 23%,
-      #0272fc 26%,
-      #02fee5 26%,
-      #02fee5 30%,
-      #0272fc 30%,
-      #0272fc 33%,
-      #02fee5 33%,
-      #02fee5 67%,
-      #0272fc 67%,
-      #0272fc 70%,
-      #02fee5 70%,
-      #02fee5 73%,
-      #0272fc 73%,
-      #0272fc 76%,
-      #02fee5 76%,
-      #02fee5 80%,
-      #0272fc 80%,
-      #0272fc 100%
-    );
-  }
-}
-
-.character {
-  background-repeat: no-repeat;
-  width: 224px;
-  height: 145px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.row:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 100vw;
+  height: 100%;
+  z-index: -1;
+  background-position: center center;
+  background-size: 250px;
+  background-repeat: repeat-y;
+  background: linear-gradient(
+    0deg,
+    #0272fc 0%,
+    #0272fc 20%,
+    #02fee5 20%,
+    #02fee5 23%,
+    #0272fc 23%,
+    #0272fc 26%,
+    #02fee5 26%,
+    #02fee5 30%,
+    #0272fc 30%,
+    #0272fc 33%,
+    #02fee5 33%,
+    #02fee5 67%,
+    #0272fc 67%,
+    #0272fc 70%,
+    #02fee5 70%,
+    #02fee5 73%,
+    #0272fc 73%,
+    #0272fc 76%,
+    #02fee5 76%,
+    #02fee5 80%,
+    #0272fc 80%,
+    #0272fc 100%
+  );
 }
 
 .selected,
@@ -97,72 +75,18 @@ body {
   background-position: bottom center;
 }
 
-.character-title {
-  text-align: center;
-  position: relative;
-  bottom: -50px;
+.selected-area:before {
+  content: "";
+  background: #02fee5;
+  width: 100vw;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-.bubbleman {
-  background-image: url(../images/bubbleman.jpg);
-}
-
-.airman {
-  background-image: url(../images/airman.jpg);
-}
-
-.quickman {
-  background-image: url(../images/quickman.jpg);
-}
-
-.heatman {
-  background-image: url(../images/heatman.jpg);
-}
-
-.drwily {
-  background-image: url(../images/drwily.jpg);
-}
-
-.woodman {
-  background-image: url(../images/woodman.jpg);
-}
-
-.metalman {
-  background-image: url(../images/metalman.jpg);
-}
-
-.flashman {
-  background-image: url(../images/flashman.jpg);
-}
-
-.crashman {
-  background-image: url(../images/crashman.jpg);
-}
-
-.selected-area {
-  text-align: center;
-  position: relative;
-  color: #000;
-  padding: 20px;
-  margin-top: 10px;
-
-  &:before {
-    content: "";
-    background: #02fee5;
-    width: 100vw;
-    height: 100%;
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
-  }
-
-  p {
-    margin: 0;
-  }
-}
-
-.selected-display {
-  margin: 0;
-}
+/* --------------------------------
+ Write your CSS here!
+ --------------------------------- */
